--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.min.js"></script>
+  <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
+
   <title>Multiplayer</title>
-  <script src="/socket.io/socket.io.js"></script>
+
+  <link rel="icon" 
+  type="image/png" 
+  href="/assets/favicon.png">
+
+  <script src="/js/game.js"></script>
+  <script src="/js/client.js"></script>
+
 </head>
 <body>
-  
+  <div id="game"></div>
 </body>
 </html>
