--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   type="image/png" 
   href="/assets/favicon.png">
 
-  <script src="/js/game.js"></script>
-  <script src="/js/client.js"></script>
+  <script src="/js/game.js" type="module"></script>
+  <script src="/js/client.js" type="module"></script>
 
 </head>
 <body>
-  <div id="game"></div>
+  <canvas id="game"></canvas>
 </body>
 </html>
