--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.min.js"></script>
   <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
-
+  <link rel="stylesheet" href="/css/style.css">
   <title>Multiplayer</title>
 
   <link rel="icon" 
