--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,12 @@
         <div id="root"></div>
     </body>
     <script>
-        window.WebSocket = {}; // desativando hot-reload
+        {
+            var WS = window.WebSocket;
+            function DevWebSocket(s) {
+                return {};
+            }
+            window.WebSocket = DevWebSocket;
+        }
     </script>
 </html>
